[package]
name = "stt-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
stt = { version = "0.1", path = "../stt", features  = ["generate", "petgraph"] }

clap = { version = "4.0", features = ["derive"] }
itertools = "0.10.5"
json = "0.12.4"
num-traits = "0.2"
petgraph = "0.6.2"
rand = "0.8"
rand_distr = "0.4.3"